Fixes dark mode on selector

--- a/styles/pages/dei-report-page.scss
+++ b/styles/pages/dei-report-page.scss
@@ -14,7 +14,8 @@
     select {
       appearance: none;
       background-color: transparent;
-      border: 1px solid black;
+      border: 1px solid $black;
+      color: $black;
       border-radius: 0;
       padding: 0.25em 3em 0.25em 1em;
       margin: 0;
@@ -23,6 +24,17 @@
       font-family: $base-font-family;
       font-size: 1.25rem;
       width: 100%;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      select {
+        border-color: $white;
+        color: $white;
+      }
+
+      .svg-arrow {
+        fill: $white;
+      }
     }
   
     @media (min-width: $tablet) {
